--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32-s3-devkitc-1]
-platform = espressif32
+platform = espressif32@6.4.0
 board = esp32-s3-devkitc-1
 ; upload_port = COM3
 ; board = esp32s3box
