--- a/platformio.ini
+++ b/platformio.ini
@@ -8,21 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
+[platformio]
+default_envs = m5stack_coreS3
+
+[env]
+monitor_filters = esp32_exception_decoder, direct
+monitor_speed = 115200
+upload_speed = 1500000
+build_type = debug
+
+
 [env:esp32-s3-devkitc-1]
 platform = espressif32@6.4.0
 board = esp32-s3-devkitc-1
-; upload_port = COM3
-; board = esp32s3box
+
 framework = arduino
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.flash_mode = qio
 board_build.flash_size = 16MB
 board_build.partitions = ./partitions_ffat.csv
+
 build_flags = 
 	-std=c++11
+	-ggdb -O0
 	-DBOARD_HAS_PSRAM
-	-DCORE_DEBUG_LEVEL=0
+	-DCORE_DEBUG_LEVEL=5
 	-Iinclude
 	-DLV_CONF_INCLUDE_SIMPLE
 	-DLV_LVGL_H_INCLUDE_SIMPLE
@@ -31,9 +43,52 @@ build_flags =
 	-DLV_TICK_PERIOD_MS=10
 	-DMONKEY_TEST_ENABLE=0
 lib_deps = 
-	m5stack/M5GFX@^0.1.5
-	m5stack/M5Unified@^0.1.4
-	lvgl/lvgl@^8.3.4
+	m5stack/M5GFX@^0.1.10
+	m5stack/M5Unified@^0.1.10
+	lvgl/lvgl@^8.3.9
 	espressif/esp32-camera@^2.0.0
+	arduino-libraries/Madgwick@^1.2.0
+	tinyu-zhao/BMI270_Sensor @ ^0.0.1
+
+
+[env:m5stack_coreS3]
+; bleeding edge Arduino 3.0 alpha -
+; see https://github.com/platformio/platform-espressif32/issues/1211#issuecomment-1770625276
+platform = https://github.com/Jason2866/platform-espressif32.git#Arduino/IDF5
+framework = arduino
+platform_packages = tool-xtensa-esp-elf-gdb
+board = m5stack-cores3
+; board = esp32-s3-devkitc-1
+; board_build.f_cpu = 240000000L
+; board_build.f_flash = 80000000L
+; board_build.flash_mode = dio
+; board_build.flash_size = 16MB
+board_build.partitions = ./partitions_ffat.csv
+
+debug_tool = esp-builtin
+upload_protocol         = esptool
+debug_init_break        = tbreak app_main
+debug_speed = 25000
+build_flags =
+	-std=c++11
+	-ggdb -O0
+	-DBOARD_HAS_PSRAM
+	-DCORE_DEBUG_LEVEL=5
+	-Iinclude
+	-DLV_CONF_INCLUDE_SIMPLE
+	-DLV_LVGL_H_INCLUDE_SIMPLE
+	-DLCD_HEIGHT=240
+	-DLCD_WIDTH=320
+	-DLV_TICK_PERIOD_MS=10
+	-DMONKEY_TEST_ENABLE=0
+
+
+lib_deps = 
+	#m5stack/M5GFX@^0.1.10
+	https://github.com/mhaberler/M5GFX.git#arduino-3.0.0-improved
+	m5stack/M5Unified@^0.1.10
+	lvgl/lvgl@^8.3.9
+	#espressif/esp32-camera@^2.0.0
+	https://github.com/espressif/esp32-camera.git#v2.0.5
 	arduino-libraries/Madgwick@^1.2.0
 	tinyu-zhao/BMI270_Sensor @ ^0.0.1
