make old version debuggable

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,11 @@ board_build.flash_mode = qio
 board_build.flash_size = 16MB
 board_build.partitions = ./partitions_ffat.csv
 
+debug_tool = esp-builtin
+; upload_protocol         = esptool
+debug_init_break        = tbreak app_main
+debug_speed = 25000
+
 build_flags = 
 	-std=c++11
 	-ggdb -O0
@@ -66,7 +71,7 @@ board = m5stack-cores3
 board_build.partitions = ./partitions_ffat.csv
 
 debug_tool = esp-builtin
-upload_protocol         = esptool
+; upload_protocol         = esptool
 debug_init_break        = tbreak app_main
 debug_speed = 25000
 build_flags =
