split into targets arduino2/arduino3 and sd/sdfat
SdFat works with cards > 32GB as well

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,20 +9,60 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 
-[platformio]
-default_envs = m5stack_coreS3
-
-[env]
+[common]
 monitor_filters = esp32_exception_decoder, direct
 monitor_speed = 115200
 upload_speed = 1500000
 build_type = debug
 
+build_flags = 
+	-std=c++11
+	-g -ggdb -O0
+	-Iinclude
+	-mfix-esp32-psram-cache-issue
+	-DBOARD_HAS_PSRAM
+	-DARDUINO_USB_CDC_ON_BOOT=1
+	; -DARDUINO_USB_MODE=1
+	-DCORE_DEBUG_LEVEL=5
+	-DLV_CONF_INCLUDE_SIMPLE
+	-DLV_LVGL_H_INCLUDE_SIMPLE
+	-DLCD_HEIGHT=240
+	-DLCD_WIDTH=320
+	-DLV_TICK_PERIOD_MS=10
+	-DMONKEY_TEST_ENABLE=0
+	-DLV_LOG_LEVEL=LV_LOG_LEVEL_INFO
 
-[env:esp32-s3-devkitc-1]
+lib_deps = 
+	lvgl/lvgl@^8.3.9
+	m5stack/M5Unified@^0.1.10
+	arduino-libraries/Madgwick@^1.2.0
+	tinyu-zhao/BMI270_Sensor @ ^0.0.1
+
+[sd]
+build_flags = 
+	-UUSE_SDFAT
+	-DUSE_SD
+lib_deps =
+
+
+[sdfat]
+build_flags = 
+	-DUSE_SDFAT
+	-UUSE_SD
+	-UINCLUDE_SDIOS
+	-DSD_FAT_TYPE=3
+	-DUSE_BLOCK_DEVICE_INTERFACE=1
+	-DFAT12_SUPPORT=0
+	-DSDFAT_FILE_TYPE=3
+	-DUSE_SPI_ARRAY_TRANSFER=1
+	-DENABLE_DEDICATED_SPI=0
+ 	-DSPI_DRIVER_SELECT=0		; selects included SdSpiESP.cpp - works fine
+lib_deps =
+	adafruit/SdFat - Adafruit Fork@^2.2.1
+
+[esp32_s3_devkitc_1]
 platform = espressif32@6.4.0
 board = esp32-s3-devkitc-1
-
 framework = arduino
 board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
@@ -31,69 +71,85 @@ board_build.flash_size = 16MB
 board_build.partitions = ./partitions_ffat.csv
 
 debug_tool = esp-builtin
-; upload_protocol         = esptool
 debug_init_break        = tbreak app_main
 debug_speed = 25000
-
-build_flags = 
-	-std=c++11
-	-ggdb -O0
-	-DBOARD_HAS_PSRAM
-	-DCORE_DEBUG_LEVEL=5
-	-Iinclude
-	-DLV_CONF_INCLUDE_SIMPLE
-	-DLV_LVGL_H_INCLUDE_SIMPLE
-	-DLCD_HEIGHT=240
-	-DLCD_WIDTH=320
-	-DLV_TICK_PERIOD_MS=10
-	-DMONKEY_TEST_ENABLE=0
+build_flags =
 lib_deps = 
 	m5stack/M5GFX@^0.1.10
-	m5stack/M5Unified@^0.1.10
-	lvgl/lvgl@^8.3.9
 	espressif/esp32-camera@^2.0.0
-	arduino-libraries/Madgwick@^1.2.0
-	tinyu-zhao/BMI270_Sensor @ ^0.0.1
 
-
-[env:m5stack_coreS3]
+[m5stack_coreS3]
 ; bleeding edge Arduino 3.0 alpha -
 ; see https://github.com/platformio/platform-espressif32/issues/1211#issuecomment-1770625276
 platform = https://github.com/Jason2866/platform-espressif32.git#Arduino/IDF5
 framework = arduino
 platform_packages = tool-xtensa-esp-elf-gdb
 board = m5stack-cores3
-; board = esp32-s3-devkitc-1
-; board_build.f_cpu = 240000000L
-; board_build.f_flash = 80000000L
-; board_build.flash_mode = dio
-; board_build.flash_size = 16MB
 board_build.partitions = ./partitions_ffat.csv
 
 debug_tool = esp-builtin
-; upload_protocol         = esptool
 debug_init_break        = tbreak app_main
 debug_speed = 25000
 build_flags =
-	-std=c++11
-	-ggdb -O0
-	-DBOARD_HAS_PSRAM
-	-DCORE_DEBUG_LEVEL=5
-	-Iinclude
-	-DLV_CONF_INCLUDE_SIMPLE
-	-DLV_LVGL_H_INCLUDE_SIMPLE
-	-DLCD_HEIGHT=240
-	-DLCD_WIDTH=320
-	-DLV_TICK_PERIOD_MS=10
-	-DMONKEY_TEST_ENABLE=0
 
 
 lib_deps = 
-	#m5stack/M5GFX@^0.1.10
-	https://github.com/mhaberler/M5GFX.git#arduino-3.0.0-improved
-	m5stack/M5Unified@^0.1.10
-	lvgl/lvgl@^8.3.9
-	#espressif/esp32-camera@^2.0.0
-	https://github.com/espressif/esp32-camera.git#v2.0.5
-	arduino-libraries/Madgwick@^1.2.0
-	tinyu-zhao/BMI270_Sensor @ ^0.0.1
+	https://github.com/mhaberler/M5GFX.git#develop
+	espressif/esp32-camera@^2.0.0
+	#https://github.com/espressif/esp32-camera.git#v2.0.5
+
+[env:arduino2_sd]
+extends = common, esp32_s3_devkitc_1, sd
+lib_deps = 
+ 	${common.lib_deps}
+ 	${esp32_s3_devkitc_1.lib_deps}
+ 	${sd.lib_deps}
+build_flags =
+ 	${common.build_flags}
+ 	${esp32_s3_devkitc_1.build_flags}
+ 	${sd.build_flags}
+build_src_filter =
+  	+<**/*.*>
+  	-<*/AppSdFat/*.*>
+
+[env:arduino2_sdfat]
+extends = common, esp32_s3_devkitc_1, sdfat
+lib_deps = 
+ 	${common.lib_deps}
+ 	${esp32_s3_devkitc_1.lib_deps}
+ 	${sdfat.lib_deps}
+build_flags =
+ 	${common.build_flags}
+ 	${esp32_s3_devkitc_1.build_flags}
+ 	${sdfat.build_flags}
+build_src_filter =
+  	+<**/*.*>
+  	-<*/AppSD/*.*>
+
+[env:arduino3_sd]
+extends = common, m5stack_coreS3, sd
+lib_deps = 
+ 	${common.lib_deps}
+ 	${m5stack_coreS3.lib_deps}
+ 	${sd.lib_deps}
+build_flags =
+ 	${common.build_flags}
+ 	${m5stack_coreS3.build_flags}
+ 	${sd.build_flags}
+build_src_filter =
+  	+<**/*.*>
+  	-<*/AppSdFat/*.*>
+
+[env:arduino3_sdfat]
+extends = common, m5stack_coreS3, sdfat
+lib_deps = 
+ 	${common.lib_deps}
+ 	${m5stack_coreS3.lib_deps}
+ 	${sdfat.lib_deps}
+build_flags =
+ 	${common.build_flags}
+ 	${m5stack_coreS3.build_flags}
+ 	${sdfat.build_flags}
+build_src_filter =
+  	+<**/*.*>
+  	-<*/AppSD/*.*>
