add simple webserver and BLE scanning
update README

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,12 +17,11 @@ build_type = debug
 
 build_flags = 
 	-std=c++11
-	-g -ggdb -O0
+	-g -Os
 	-Iinclude
 	-mfix-esp32-psram-cache-issue
 	-DBOARD_HAS_PSRAM
 	-DARDUINO_USB_CDC_ON_BOOT=1
-	; -DARDUINO_USB_MODE=1
 	-DCORE_DEBUG_LEVEL=5
 	-DLV_CONF_INCLUDE_SIMPLE
 	-DLV_LVGL_H_INCLUDE_SIMPLE
@@ -31,12 +30,16 @@ build_flags =
 	-DLV_TICK_PERIOD_MS=10
 	-DMONKEY_TEST_ENABLE=0
 	-DLV_LOG_LEVEL=LV_LOG_LEVEL_INFO
+	-DWIFI_SSID=\"${sysenv.WIFI_SSID}\"
+	-DWIFI_PASSWORD=\"${sysenv.WIFI_PASSWORD}\"
+
 
 lib_deps = 
 	lvgl/lvgl@^8.3.9
 	m5stack/M5Unified@^0.1.10
 	arduino-libraries/Madgwick@^1.2.0
 	tinyu-zhao/BMI270_Sensor @ ^0.0.1
+
 
 [sd]
 build_flags = 
@@ -49,6 +52,7 @@ lib_deps =
 build_flags = 
 	-DUSE_SDFAT
 	-UUSE_SD
+	-DBOARD_HAS_PSRAM
 	-UINCLUDE_SDIOS
 	-DSD_FAT_TYPE=3
 	-DUSE_BLOCK_DEVICE_INTERFACE=1
@@ -74,9 +78,14 @@ debug_tool = esp-builtin
 debug_init_break        = tbreak app_main
 debug_speed = 25000
 build_flags =
+	;-DWEBSERVER    ; works ok Arduino2
+	;-DTEST_NIMBLE  ; break on Arduino2
+
 lib_deps = 
 	m5stack/M5GFX@^0.1.10
 	espressif/esp32-camera@^2.0.0
+	h2zero/NimBLE-Arduino@^1.4.1
+
 
 [m5stack_coreS3]
 ; bleeding edge Arduino 3.0 alpha -
@@ -91,12 +100,14 @@ debug_tool = esp-builtin
 debug_init_break        = tbreak app_main
 debug_speed = 25000
 build_flags =
-
-
+	; -DWEBSERVER   ; both work simultaneously ob Arduino3
+	; -DTEST_NIMBLE
 lib_deps = 
 	https://github.com/mhaberler/M5GFX.git#develop
 	espressif/esp32-camera@^2.0.0
 	#https://github.com/espressif/esp32-camera.git#v2.0.5
+	https://github.com/h2zero/esp-nimble-cpp.git
+
 
 [env:arduino2_sd]
 extends = common, esp32_s3_devkitc_1, sd
